--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Grant execute permission for build.sh
-      run: chmod +x build.sh
-    - name: Build
-      run: ./build.sh
+    - name: Grant execute permission for init.sh
+      run: chmod +x init.sh
+    - name: Grant execute permission for makeffi.sh
+      run: chmod +x makeffi.sh
+    - name: Grant execute permission for makepy.sh
+      run: chmod +x makepy.sh
+    - name: init
+      run: ./init.sh
+    - name: makeffi
+      run: ./makeffi.sh
+    - name: makepy
+      run: ./makepy.sh
