--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,6 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Set up Python 3.9.1
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9.1'
+        architecture: 'x64'
     - name: Grant execute permission for init.sh
       run: chmod +x init.sh
     - name: Grant execute permission for makeffi.sh
