--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Setup Go environment
+      uses: actions/setup-go@v2.1.3
     - name: Set up Python 3.9.1
       uses: actions/setup-python@v2
       with:
@@ -24,9 +26,13 @@ jobs:
       run: chmod +x makeffi.sh
     - name: Grant execute permission for makepy.sh
       run: chmod +x makepy.sh
+    - name: Grant execute permission for upload.sh
+      run: chmod +x upload.sh
     - name: init
       run: ./init.sh
-    - name: makeffi
-      run: ./makeffi.sh
-    - name: makepy
-      run: ./makepy.sh
+    - name: makeffi aarch64
+      run: ./makeffi.sh aarch64-linux-android
+    - name: makepy aarch64
+      run: ./makepy.sh aarch64-linux-android
+    - name: upload aarch64
+      run ./upload.sh aarch64
