--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,9 +2,8 @@ name: Android CI
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    tags:
+    - 'v*'
 
 jobs:
   build:
@@ -35,4 +34,45 @@ jobs:
     - name: makepy aarch64
       run: ./makepy.sh aarch64-linux-android
     - name: upload aarch64
-      run ./upload.sh aarch64
+      run: ./upload.sh aarch64-linux-android
+    - name: makeffi armv7a
+      run: ./makeffi.sh armv7a-linux-androideabi
+    - name: makepy armv7a
+      run: ./makepy.sh armv7a-linux-androideabi
+    - name: upload armv7a
+      run: ./upload.sh armv7a-linux-androideabi
+    - name: makeffi i686
+      run: ./makeffi.sh i686-linux-android
+    - name: makepy i686
+      run: ./makepy.sh i686-linux-android
+    - name: upload i686
+      run: ./upload.sh i686-linux-android
+    - name: makeffi x86_64
+      run: ./makeffi.sh x86_64-linux-android
+    - name: makepy x86_64
+      run: ./makepy.sh x86_64-linux-android
+    - name: upload x86_64
+      run: ./upload.sh x86_64-linux-android
+    - name: Build project # This would actually build your project, using zip for an example artifact
+      run: |
+        zip html.zip *.a
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+    - name: Upload Release Asset
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./my-artifact.zip
+          asset_name: my-artifact.zip
+          asset_content_type: application/zip
