--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -53,7 +53,7 @@ jobs:
       run: ./makepy.sh x86_64-linux-android
     - name: upload x86_64
       run: ./upload.sh x86_64-linux-android
-    - name: Build project # This would actually build your project, using zip for an example artifact
+    - name: Build zip file
       run: |
         zip libs.zip *.a
     - name: Create Release
