--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -66,7 +66,8 @@ jobs:
       run: ./upload.sh x86_64-linux-android
     - name: Build zip file
       run: |
-        zip libs.zip *.a
+        cd zip-dir
+        zip -r libs.zip *
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
