--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -68,6 +68,7 @@ jobs:
       run: |
         cd zip-dir
         zip -r libs.zip *
+        cd ..
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -85,6 +86,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./libs.zip
+        asset_path: ./zip-dir/libs.zip
         asset_name: libs.zip
         asset_content_type: application/zip
