--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -64,6 +64,8 @@ jobs:
       run: ./makepy.sh x86_64-linux-android
     - name: upload x86_64
       run: ./upload.sh x86_64-linux-android
+    - name: rm __pycache__
+      run: find ./zip-dir -name '__pycache__' -exec rm -rf {} \;
     - name: Build zip file
       run: |
         cd zip-dir
