--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: lsb core
+      run: sudo apt update && sudo apt install -y --no-install-recommends lsb-core
     - name: Setup Go environment
       uses: actions/setup-go@v2.1.3
     - name: Set up Python 3.9.1
