--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: lsb core
-      run: sudo apt remove -y lsb-release
+      run: sudo apt update && sudo apt install -y lsb-core
     - name: Setup Go environment
       uses: actions/setup-go@v2.1.3
     - name: Set up Python 3.9.1
