--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: lsb core
       run: sudo apt update && sudo apt install -y lsb-core
+    - name: lsb test
+      run: lsb_release -a
     - name: Setup Go environment
       uses: actions/setup-go@v2.1.3
     - name: Set up Python 3.9.1
