--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,7 +38,8 @@ jobs:
         make
         sudo make install
         sudo make clean
-        ln -s /usr/bin/python3 /usr/python/bin/python3
+        sudo rm /usr/bin/python3
+        sudo ln -s /usr/bin/python3 /usr/python/bin/python3
         cd ..
     - name: makeffi aarch64
       run: ./makeffi.sh aarch64-linux-android
