--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -40,6 +40,7 @@ jobs:
         make clean
         sudo rm /usr/bin/python3
         sudo ln -s $(pwd)/build/python/bin/python3 /usr/bin/python3
+        python3 -m pip install --upgrade pip
         cd ..
     - name: makeffi aarch64
       run: ./makeffi.sh aarch64-linux-android
