--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,12 +34,13 @@ jobs:
     - name: build python
       run: |
         cd Python-3.9.1
-        ./configure --prefix=$(pwd)/build/python
+        ./configure --prefix=$(pwd)/../build/python
         make
         make install
         make clean
         sudo rm /usr/bin/python3
         sudo ln -s $(pwd)/build/python/bin/python3 /usr/bin/python3
+        export PATH=$PATH:$(pwd)/../build/python/bin
         python3 -m pip install --upgrade pip
         cd ..
     - name: makeffi aarch64
