--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -45,7 +45,8 @@ jobs:
         sudo rm /usr/bin/python2
         cd ..
         wget https://bootstrap.pypa.io/get-pip.py
-        $(pwd)/build/python/bin/python3 git-pip.py
+        ls -l
+        $(pwd)/build/python/bin/python3 git-pip*.py
     - name: makeffi aarch64
       run: ./makeffi.sh aarch64-linux-android
     - name: makessl aarch64
