--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -46,7 +46,8 @@ jobs:
         cd ..
         wget https://bootstrap.pypa.io/get-pip.py
         ls -l
-        $(pwd)/build/python/bin/python3 git-pip*.py
+        ls $(pwd)/build/python/bin/
+        $(pwd)/build/python/bin/python3 git-pip.py
     - name: makeffi aarch64
       run: ./makeffi.sh aarch64-linux-android
     - name: makessl aarch64
