--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,6 +31,10 @@ jobs:
       run: chmod +x makessl.sh
     - name: init
       run: ./init.sh
+    - name: make openblas
+      run: |
+        chmod +x makeopenblas.sh
+        makeopenblas.sh
     - name: build python
       run: |
         sudo apt remove python
